feat: Add image modal (lightbox) functionality for blueprint images.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,67 @@
             box-sizing: border-box;
             border-radius: 4px;
         }
+
+        /* --- MODAL / LIGHTBOX --- */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(5px);
+            align-items: center;
+            justify-content: center;
+            animation: fadeInModal 0.2s ease-out;
+        }
+
+        @keyframes fadeInModal {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 4px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            object-fit: contain;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .modal-close:hover,
+        .modal-close:focus {
+            color: var(--accent);
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .blueprint-image {
+            cursor: zoom-in;
+            /* Indica que é clicável */
+        }
     </style>
 </head>
 
@@ -201,6 +262,12 @@
     </header>
 
     <div class="container" id="app">
+    </div>
+
+    <!-- MODAL DE IMAGEM -->
+    <div id="imageModal" class="modal" onclick="closeImageModal()">
+        <span class="modal-close">&times;</span>
+        <img class="modal-content" id="fullImage">
     </div>
 
     <script>
@@ -297,7 +364,7 @@
                     </div>
                     <div class="card-desc">${bp.description}</div>
                     
-                    ${bp.imageUrl ? `<img src="${bp.imageUrl}" alt="Preview de ${bp.title}" class="blueprint-image" loading="lazy">` : ''}
+                    ${bp.imageUrl ? `<img src="${bp.imageUrl}" onclick="openImageModal('${bp.imageUrl}')" alt="Preview de ${bp.title}" class="blueprint-image" loading="lazy">` : ''}
                     
                     <div class="actions">
                         <button class="primary" onclick="copyString('${bp.string}', this)">
@@ -365,6 +432,26 @@
 
         // Inicia a renderização
         renderBlueprints();
+
+        // --- FUNÇÕES DO MODAL ---
+        function openImageModal(src) {
+            const modal = document.getElementById('imageModal');
+            const modalImg = document.getElementById('fullImage');
+            modal.style.display = "flex"; // Usando flex para centralizar
+            modalImg.src = src;
+        }
+
+        function closeImageModal() {
+            const modal = document.getElementById('imageModal');
+            modal.style.display = "none";
+        }
+
+        // Fechar com ESC
+        document.addEventListener('keydown', function (event) {
+            if (event.key === "Escape") {
+                closeImageModal();
+            }
+        });
     </script>
 </body>
 
